# fuse-n

./: .gitignore  .replit  Home.html  app.py  chat_data.sql  chat_schema.sql  dev.nix  index.html  navbar.css  navbar.html  netlify.toml  projects_schema.sql  pyproject.toml  replit.md  requirements.txt  run_local_server.py  services.py  setup_nix.sh  styles.css  triggers.sql
Projects/: index.html  job-matching.html  jobs-styles.css
backend/: app.py  pyproject.toml  services.py
css/: ai_chatbot.css
script/: ai_chatbot.js
smartlife/: package-lock.json  package.json
smartlife/public/: index.html
smartlife/src/: index.css
smartlife/src/components/: Home.js  header.js
static/: styles.css
static/css/: admin-styles.css  ai_chatbot.css  jobs-styles.css  layout.css  navbar.css  styles.css  variables.css
static/js/: ai_chatbot.js  chat.js  firebase_init.js  message_init.js  navbar.js  project_submission.js  sidebar.js  supabase_init.js
templates/: admin-login.html  admin.html  billings.html  career-opportunities.html  careers.html  community.html  dashboard.html  explore-work.html  index.html  login.html  messages.html  oauth_consent.html  research.html  settings.html  start-project.html
templates/Projects/: jobs-board.html
templates/Projects/pages/: ai_chatbot.html  data_analysis.html  survey.html
templates/components/: admin_sidebar.html  navbar.html  sidebar.html
