[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-mail>=0.10.0",
    "gspread>=6.2.1",
    "gunicorn>=23.0.0",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.0",
    "werkzeug>=3.1.4",
]
